removes resume, updates content

--- a/src/design/index.html
+++ b/src/design/index.html
@@ -20,10 +20,8 @@
 		 			I'm not looking for design work &mdash; Recruiters, you will be ignored.
 		 		</li>
 		 		<li>
-		 			I'll consider <a href="/illustration">illustration</a> commissions! bysusanlin at gmail.
+		 			I'll consider <a href="/illustration">illustration</a> commissions!
 		 		</li>
-		 		<br><br>
-		 		For a formal design work history, take this <a href="http://bysusanlin.com/SusanLin-resume.pdf">PDF resume.</a>
 			</p>
 		</div>
 
