--- a/src/illustration/index.html
+++ b/src/illustration/index.html
@@ -17,10 +17,10 @@
 		 		<br><br>
 		 		Availability:
 		 		<li>
-		 			I'm not looking for design work &mdash; Recruiters, you will be ignored.
-		 		</li>
-		 		<li>
-		 			I'll consider illustration commissions! bysusanlin at gmail.
+		 			Open for illustration commissions!
+        </li>
+        <li>
+          Interested? bysusanlin at gmail.
 		 		</li>
 			</p>
 		</div>
