--- a/src/about/index.html
+++ b/src/about/index.html
@@ -17,7 +17,7 @@
 			</h2>
 
 			<p>
-				Hello World; Susan is a Product Designer at <a href="http://teamtreehouse.com">Treehouse</a> and an Artist, primarily painting in watercolor.
+				Hello World; Susan is a Product Designer at <a href="http://teamtreehouse.com/engineering">Treehouse</a> and an Artist, primarily painting in watercolor. She is currently traveling and working remotely around the world.
       </p>
 
       <p>
