--- a/src/talks/index.html
+++ b/src/talks/index.html
@@ -17,11 +17,13 @@
 			</h2>
 
 			<p>
-				I enjoy speaking about design process especially where it meets the code and how it relates to illustration. I would like to share more of work I've been a part of. If you'd like to work together for your event: bysusanlin at gmail.
+				I enjoy speaking about design process, especially where it meets the code and how it relates to painting. I would like to share more of my work. If you'd like to work together for your event, please email bysusanlin at gmail.
 			</p>
 
 			<p>
 				Past Talks:
+				<li> Remote Year Junction &mdash; <a href="https://www.eventbrite.com/e/the-junction-prague-tickets-26112567392 ">Full Steam Ahead</a> | <a href="https://www.youtube.com/watch?v=kY6lv7WsPSM">Video</a> </li>
+
 				<li> WaffleJS &mdash; <a href="https://ti.to/wafflejs/august">No Wasted Paint</a> | <a href="http://sketch.bysusanlin.com/post/126377952333/no-wasted-paint">Write-up</a> </li>
 
 				<li> IXDA SF &mdash; <a href="http://ixdasf.ning.com/events/designdoing">Speaking the Code</a> | <a href="#speaking-the-code">Video</a> </li>
