removes resume, updates content

--- a/about/index.html
+++ b/about/index.html
@@ -75,7 +75,7 @@
 			</h2>
 
 			<p>
-				Hello World; Susan is a Product Designer at <a href="http://teamtreehouse.com">Treehouse</a> and an Artist, primarily painting in watercolor.
+				Hello World; Susan is a Product Designer at <a href="http://teamtreehouse.com/engineering">Treehouse</a> and an Artist, primarily painting in watercolor. She is currently traveling and working remotely around the world.
       </p>
 
       <p>
@@ -168,24 +168,18 @@
   </a>
 
   <p>
-    See My Art
-  </p>
-
-  <p>
-    <a href="http://www.behindthemuseumcafe.com/gallery.html">Behind the Museum Cafe</a> <br>
-    Portland, OR. Now-April 30th.
+    See my art
   </p>
   <p>
     <a href="https://www.facebook.com/teaspoonsanfrancisco/">Teaspoon SF</a> <br>
-    San Francisco, CA. Now-July 2017.
+    San Francisco, CA
   </p>
 
   <div class="typeLowlight"> &mdash; </div>
 
   <p>
-    Support My Art
+    Support my art
   </p>
-
   <p>
     <a href="http://shop.bysusanlin.com"> Shop </a>
     <br>
@@ -196,8 +190,19 @@
     Monthly Support
   </p>
   <p>
-    <a href="https://cash.me/$SusanL">Buy me a coffee</a> <br>
+    <a href="https://cash.me/$SusanL">Square Cash</a> || <a href="https://paypal.me/SusanL">Paypal</a> <br>
     One Time Support
+  </p>
+
+  <div class="typeLowlight"> &mdash; </div>
+
+  <p>
+    Subscribe to my newsletter
+  </p>
+  <p>
+    <a href="http://tinyletter.com/bysusanlin">Tinyletter</a>
+    <br>
+    Traveling &amp; Working Remotely
   </p>
 
 </nav>
