--- a/talks/index.html
+++ b/talks/index.html
@@ -75,11 +75,13 @@
 			</h2>
 
 			<p>
-				I enjoy speaking about design process especially where it meets the code and how it relates to illustration. I would like to share more of work I've been a part of. If you'd like to work together for your event: bysusanlin at gmail.
+				I enjoy speaking about design process, especially where it meets the code and how it relates to painting. I would like to share more of my work. If you'd like to work together for your event, please email bysusanlin at gmail.
 			</p>
 
 			<p>
 				Past Talks:
+				<li> Remote Year Junction &mdash; <a href="https://www.eventbrite.com/e/the-junction-prague-tickets-26112567392 ">Full Steam Ahead</a> | <a href="https://www.youtube.com/watch?v=kY6lv7WsPSM">Video</a> </li>
+
 				<li> WaffleJS &mdash; <a href="https://ti.to/wafflejs/august">No Wasted Paint</a> | <a href="http://sketch.bysusanlin.com/post/126377952333/no-wasted-paint">Write-up</a> </li>
 
 				<li> IXDA SF &mdash; <a href="http://ixdasf.ning.com/events/designdoing">Speaking the Code</a> | <a href="#speaking-the-code">Video</a> </li>
@@ -125,24 +127,18 @@
   </a>
 
   <p>
-    See My Art
-  </p>
-
-  <p>
-    <a href="http://www.behindthemuseumcafe.com/gallery.html">Behind the Museum Cafe</a> <br>
-    Portland, OR. Now-April 30th.
+    See my art
   </p>
   <p>
     <a href="https://www.facebook.com/teaspoonsanfrancisco/">Teaspoon SF</a> <br>
-    San Francisco, CA. Now-July 2017.
+    San Francisco, CA
   </p>
 
   <div class="typeLowlight"> &mdash; </div>
 
   <p>
-    Support My Art
+    Support my art
   </p>
-
   <p>
     <a href="http://shop.bysusanlin.com"> Shop </a>
     <br>
@@ -153,8 +149,19 @@
     Monthly Support
   </p>
   <p>
-    <a href="https://cash.me/$SusanL">Buy me a coffee</a> <br>
+    <a href="https://cash.me/$SusanL">Square Cash</a> || <a href="https://paypal.me/SusanL">Paypal</a> <br>
     One Time Support
+  </p>
+
+  <div class="typeLowlight"> &mdash; </div>
+
+  <p>
+    Subscribe to my newsletter
+  </p>
+  <p>
+    <a href="http://tinyletter.com/bysusanlin">Tinyletter</a>
+    <br>
+    Traveling &amp; Working Remotely
   </p>
 
 </nav>
