--- a/illustration/index.html
+++ b/illustration/index.html
@@ -75,10 +75,10 @@
 		 		<br><br>
 		 		Availability:
 		 		<li>
-		 			I'm not looking for design work &mdash; Recruiters, you will be ignored.
-		 		</li>
-		 		<li>
-		 			I'll consider illustration commissions! bysusanlin at gmail.
+		 			Open for illustration commissions!
+        </li>
+        <li>
+          Interested? bysusanlin at gmail.
 		 		</li>
 			</p>
 		</div>
@@ -170,24 +170,18 @@
   </a>
 
   <p>
-    See My Art
-  </p>
-
-  <p>
-    <a href="http://www.behindthemuseumcafe.com/gallery.html">Behind the Museum Cafe</a> <br>
-    Portland, OR. Now-April 30th.
+    See my art
   </p>
   <p>
     <a href="https://www.facebook.com/teaspoonsanfrancisco/">Teaspoon SF</a> <br>
-    San Francisco, CA. Now-July 2017.
+    San Francisco, CA
   </p>
 
   <div class="typeLowlight"> &mdash; </div>
 
   <p>
-    Support My Art
+    Support my art
   </p>
-
   <p>
     <a href="http://shop.bysusanlin.com"> Shop </a>
     <br>
@@ -198,8 +192,19 @@
     Monthly Support
   </p>
   <p>
-    <a href="https://cash.me/$SusanL">Buy me a coffee</a> <br>
+    <a href="https://cash.me/$SusanL">Square Cash</a> || <a href="https://paypal.me/SusanL">Paypal</a> <br>
     One Time Support
+  </p>
+
+  <div class="typeLowlight"> &mdash; </div>
+
+  <p>
+    Subscribe to my newsletter
+  </p>
+  <p>
+    <a href="http://tinyletter.com/bysusanlin">Tinyletter</a>
+    <br>
+    Traveling &amp; Working Remotely
   </p>
 
 </nav>
