updates bio on about so it is recent

--- a/about/index.html
+++ b/about/index.html
@@ -75,15 +75,15 @@
 			</h2>
 
 			<p>
-				Hello World; Susan is a Product Designer at <a href="http://teamtreehouse.com/engineering">Treehouse</a> and an Artist, primarily painting in watercolor. She is currently traveling and working remotely around the world.
+				Hello World; Susan is a Product Designer who codes and an Artist, primarily painting in watercolor.
       </p>
 
       <p>
-				Previously, she <a href="/talks">built styleguides</a> in addition to user experiences at OpenTable and Trulia. She studied <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">HCI at Carnegie Mellon.</a> She believes the best technology designers are able to code and push their own pixels.
+				Previously, she <a href="/talks">built styleguides</a> in addition to user experiences at Treehouse, OpenTable, and Trulia. She studied <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">HCI at Carnegie Mellon.</a> She believes the best technology designers are able to code and push their own pixels.
       </p>
 
       <p>
-				She illustrates. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes.</a> She paints many <a href="https://instagram.com/explore/tags/linwatercolorforest/">watercolor trees</a> and is inspired by Studio Ghibli. She believes delibrate practice is the key to a successful art practice.
+				She illustrates. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes.</a> She paints many <a href="https://instagram.com/explore/tags/linwatercolorforest/">watercolor trees.</a> And most recently, she indulges in <a href="https://www.instagram.com/explore/tags/pixelsbysusan/">pixel art.</a> She believes delibrate practice is the key to a successful art practice.
       </p>
 
       <br>
