--- a/about/index.html
+++ b/about/index.html
@@ -146,7 +146,7 @@
 		<div>
 
 			<br>
-			<img src="/images/about/bysusanlin.borealis.jpg">
+			<img src="/images/about/bysusanlin.borealis.jpg" class="avatar">
 			<br>
 
 			<p>
