updates treehouse section to be past tense

--- a/design/index.html
+++ b/design/index.html
@@ -87,7 +87,7 @@
 			<img src="/images/work/treehouse.png">
 			<h2> Treehouse </h2>
 			<p>
-				I currently work with the <a href="http://teamtreehouse.com">Treehouse</a> <a href="http://dribbble.com/treehouse">design team</a> as a Product Designer. I also code landing pages, illustrate course assets, chip away at our styleguide, and <a href="https://medium.com/treehouse-engineering">write blog posts.</a> Featured above is the <a href="http://teamtreehouse.com/back-to-school">Back to School</a> 2015 marketing campaign.
+				I worked at <a href="http://teamtreehouse.com">Treehouse</a> as a Product Designer on the <a href="http://dribbble.com/treehouse">design team.</a> I had a hand in designing B2B products, consumer products, coding landing pages, illustrating course assets, and <a href="https://medium.com/treehouse-engineering">writing blog posts.</a> Featured above is the <a href="http://teamtreehouse.com/back-to-school">Back to School</a> 2015 marketing campaign.
 		</div>
 
 		<div>
@@ -219,7 +219,7 @@
     <a href="https://cash.me/$SusanL">Square Cash</a> || <a href="https://paypal.me/SusanL">Paypal</a> <br>
     One Time Support
   </p>
-  
+
 </nav>
 <footer>
 
