add sailor moon art show

--- a/design/index.html
+++ b/design/index.html
@@ -197,6 +197,11 @@
     See my art
   </p>
   <p>
+    <a href="http://moonprismpower.net/">Moon Prism Power @ The Galallery</a>
+    <br>
+    Dec 9 – Jan 29 in San Francisco, CA
+  </p>
+  <p>
     <a href="https://www.facebook.com/teaspoonsanfrancisco/">Teaspoon SF</a> <br>
     San Francisco, CA
   </p>
