--- a/sketchnotes/index.html
+++ b/sketchnotes/index.html
@@ -73,7 +73,7 @@
 			<h2> Sketchnotes </h2>
 
 			<p>
-					Hire me to sketchnote your event. I create big scale watercolor painted notes. I can effectively sketch topics in User Experience, Design Process, Front-end Engineering, and Diversity. I've previously been hired to sketch AlterConf, Clarity, and Smashing Conf. I also offer the notes to speakers as gifts. <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">Check out the full archive of sketchnotes.</a>
+					<em>I am currently not accepting new sketchnote inquiries.</em> I create big scale watercolor painted notes. I can effectively sketch topics in User Experience, Design Process, Front-end Engineering, and Diversity. I've previously been hired to sketch AlterConf, Clarity, and Smashing Conf. I also offer the notes to speakers as gifts. <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">Check out the full archive of sketchnotes.</a>
 			</p>
 
 			<p>
@@ -113,12 +113,6 @@
             Sketchnotes are offered to speakers at the end of the event as gifts.
 					</li>
 				</ul>
-			</p>
-
-			<br>
-
-			<p>
-				Sound good? Please email bysusanlin at gmail.
 			</p>
 
 		</div>
@@ -201,6 +195,11 @@
 
   <p>
     See my art
+  </p>
+  <p>
+    <a href="http://moonprismpower.net/">Moon Prism Power @ The Galallery</a>
+    <br>
+    Dec 9 – Jan 29 in San Francisco, CA
   </p>
   <p>
     <a href="https://www.facebook.com/teaspoonsanfrancisco/">Teaspoon SF</a> <br>
