--- a/talks/index.html
+++ b/talks/index.html
@@ -75,7 +75,7 @@
 			</h2>
 
 			<p>
-				I enjoy speaking about design process, especially where it meets the code and how it relates to painting. I would like to share more of my work. If you'd like to work together for your event, please email bysusanlin at gmail.
+				<em>I am currently not accepting new speaking inquiries.</em> I enjoy speaking about my work and process, especially regarding where creative and technical meets.
 			</p>
 
 			<p>
@@ -128,6 +128,11 @@
 
   <p>
     See my art
+  </p>
+  <p>
+    <a href="http://moonprismpower.net/">Moon Prism Power @ The Galallery</a>
+    <br>
+    Dec 9 – Jan 29 in San Francisco, CA
   </p>
   <p>
     <a href="https://www.facebook.com/teaspoonsanfrancisco/">Teaspoon SF</a> <br>
