updates origins interview and sm art show links

--- a/about/index.html
+++ b/about/index.html
@@ -92,6 +92,9 @@
         Interviews: <br>
         <ul>
           <li>
+            <a href="http://our-origins.com/post/153058855836/susan-lin-product-designer-and-artist">Our Origins</a> &mdash; Susan Lin, Product Designer and Artist
+          </li>
+          <li>
             <a href="http://spec.fm/podcasts/design-details/22326">Design Details Podcast</a> &mdash; 86: Adult Recess feat. Susan Lin
           </li>
           <li>
@@ -111,6 +114,10 @@
       <p>
         Art Shows &amp; Engagements: <br>
         <ul>
+          <li>
+            <a href="http://moonprismpower.net/">Moon Prism Power: Sailor Moon Art Show at The Galallery</a> &mdash;
+              San Francisco, CA. <span class="typeNums">12/9/15-01/29/17.</span>
+          </li>
           <li>
             <a href="https://www.facebook.com/teaspoonsanfrancisco/">Art on display at Teaspoon SF</a> &mdash;
               San Francisco, CA. <span class="typeNums">Now.</span>
