--- a/talks/index.html
+++ b/talks/index.html
@@ -129,7 +129,7 @@
     See my art
   </p>
   <p>
-    <a href="http://moonprismpower.net/">Moon Prism Power @ The Galallery</a>
+    <a href="http://moonprismpower.net/">Moon Prism Power at The Galallery</a>
     <br>
     Dec 9 – Jan 29 in San Francisco, CA
   </p>
