--- a/talks/index.html
+++ b/talks/index.html
@@ -80,7 +80,8 @@
 
 			<p>
 				Past Talks:
-
+				<li> The Junction &mdash; <a href="https://www.eventbrite.com/e/the-junction-prague-tickets-26112567392 ">Full STEAM Ahead</a> | <a href="https://www.youtube.com/watch?v=kY6lv7WsPSM">Video</a> </li>
+				
 				<li> WaffleJS &mdash; <a href="https://ti.to/wafflejs/august">No Wasted Paint</a> | <a href="http://sketch.bysusanlin.com/post/126377952333/no-wasted-paint">Write-up</a> </li>
 
 				<li> IXDA SF &mdash; <a href="http://ixdasf.ning.com/events/designdoing">Speaking the Code</a> | <a href="#speaking-the-code">Video</a> </li>
