updates to content

--- a/sketchnotes/index.html
+++ b/sketchnotes/index.html
@@ -54,11 +54,6 @@
         Talks
       </li>
     </a>
-    <a href="http://sketch.bysusanlin.com">
-      <li>
-        Blog
-      </li>
-    </a>
     <a href="http://shop.bysusanlin.com">
       <li>
         Shop
@@ -197,9 +192,9 @@
     See my art
   </p>
   <p>
-    <a href="http://moonprismpower.net/">Moon Prism Power at The Galallery</a>
+    <a href="http://thegalallery.com/love-is">Love Is at The Galallery</a>
     <br>
-    Dec 9 – Jan 29 in San Francisco, CA
+    San Francisco, CA
   </p>
   <p>
     <a href="https://www.facebook.com/teaspoonsanfrancisco/">Teaspoon SF</a> <br>
