--- a/about/index.html
+++ b/about/index.html
@@ -54,11 +54,6 @@
         Talks
       </li>
     </a>
-    <a href="http://sketch.bysusanlin.com">
-      <li>
-        Blog
-      </li>
-    </a>
     <a href="http://shop.bysusanlin.com">
       <li>
         Shop
@@ -79,11 +74,11 @@
       </p>
 
       <p>
-				Previously, she <a href="/talks">built styleguides</a> in addition to user experiences at Treehouse, OpenTable, and Trulia. She studied <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">HCI at Carnegie Mellon.</a> She believes the best technology designers are able to code and push their own pixels.
+				She current designs at Automattic. Previously, she <a href="/talks">built styleguides</a> in addition to user experiences at Treehouse, OpenTable, and Trulia. She studied <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">HCI at Carnegie Mellon.</a> She believes the best technology designers are able to code and push their own pixels.
       </p>
 
       <p>
-				She illustrates. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes.</a> She paints many <a href="https://instagram.com/explore/tags/linwatercolorforest/">watercolor trees.</a> And most recently, she indulges in <a href="https://www.instagram.com/explore/tags/pixelsbysusan/">pixel art.</a> She believes delibrate practice is the key to a successful art practice.
+				She illustrates. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes.</a> She paints many <a href="https://instagram.com/explore/tags/linwatercolorforest/">watercolor trees</a> and <a href="https://www.instagram.com/explore/tags/susansmovingstudio/">sketches on the go.</a> And most recently, she indulges in <a href="https://www.instagram.com/explore/tags/pixelsbysusan/">pixel art.</a> She believes delibrate practice is the key to a successful art practice.
       </p>
 
       <br>
@@ -115,22 +110,26 @@
         Art Shows &amp; Engagements: <br>
         <ul>
           <li>
+            <a href="http://thegalallery.com/love-is">Love Is: Benefit Art Show at The Galallery</a> &mdash;
+              San Francisco, CA. <span class="typeNums">2/18/17-Now</span>
+          </li>
+          <li>
             <a href="http://moonprismpower.net/">Moon Prism Power: Sailor Moon Art Show at The Galallery</a> &mdash;
-              San Francisco, CA. <span class="typeNums">12/9/15-01/29/17.</span>
+              San Francisco, CA. <span class="typeNums">12/9/15-01/29/17</span>
           </li>
           <li>
             <a href="https://www.facebook.com/teaspoonsanfrancisco/">Art on display at Teaspoon SF</a> &mdash;
-              San Francisco, CA. <span class="typeNums">Now.</span>
+              San Francisco, CA. <span class="typeNums">Now</span>
           </li>
           <li>
             <a href="http://www.behindthemuseumcafe.com/gallery.html">Show at Behind the Museum Cafe</a> &mdash;
-              Portland, OR. <span class="typeNums">3/1/16-4/30/16.</span>
+              Portland, OR. <span class="typeNums">3/1/16-4/30/16</span>
           </li>
           <li>
-            <a href="https://www.facebook.com/events/1580301958953195/?active_tab=posts">Group Show at Coffee Shop</a> &mdash; Walnut Creek, CA. <span class="typeNums">4/7/16.</span>
+            <a href="https://www.facebook.com/events/1580301958953195/?active_tab=posts">Group Show at Coffee Shop</a> &mdash; Walnut Creek, CA. <span class="typeNums">4/7/16</span>
           </li>
           <li>
-            <a href="http://www.alternativepressexpo.com/">Booth at Alternative Press Expo</a> &mdash; San Jose, CA. <span class="typeNums">10/3/15-10/4/15.</span>
+            <a href="http://www.alternativepressexpo.com/">Booth at Alternative Press Expo</a> &mdash; San Jose, CA. <span class="typeNums">10/3/15-10/4/15</span>
           </li>
         </ul>
       </p>
@@ -178,9 +177,9 @@
     See my art
   </p>
   <p>
-    <a href="http://moonprismpower.net/">Moon Prism Power at The Galallery</a>
+    <a href="http://thegalallery.com/love-is">Love Is at The Galallery</a>
     <br>
-    Dec 9 – Jan 29 in San Francisco, CA
+    San Francisco, CA
   </p>
   <p>
     <a href="https://www.facebook.com/teaspoonsanfrancisco/">Teaspoon SF</a> <br>
