--- a/about/index.html
+++ b/about/index.html
@@ -74,7 +74,7 @@
       </p>
 
       <p>
-				She current designs at Automattic. Previously, she <a href="/talks">built styleguides</a> in addition to user experiences at Treehouse, OpenTable, and Trulia. She studied <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">HCI at Carnegie Mellon.</a> She believes the best technology designers are able to code and push their own pixels.
+				She currently designs at Automattic. Previously, she <a href="/talks">built styleguides</a> in addition to user experiences at Treehouse, OpenTable, and Trulia. She studied <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">HCI at Carnegie Mellon.</a> She believes the best technology designers are able to code and push their own pixels.
       </p>
 
       <p>
