somehow I forgot to add this earlier even tho that is why i am updating this today

--- a/about/index.html
+++ b/about/index.html
@@ -110,6 +110,10 @@
         Art Shows &amp; Engagements: <br>
         <ul>
           <li>
+            <a href="https://www.nasa.gov/press-release/goddard/2017/james-webb-space-telescope-art-exhibit-opens-to-public/">The James Webb Space Telescope: Art + Science at NASA Goddard</a> &mdash;
+              Greenbelt, MD. <span class="typeNums">3/3/17-4/16/17</span>
+          </li>
+          <li>
             <a href="http://thegalallery.com/love-is">Love Is: Benefit Art Show at The Galallery</a> &mdash;
               San Francisco, CA. <span class="typeNums">2/18/17-Now</span>
           </li>
@@ -175,6 +179,11 @@
 
   <p>
     See my art
+  </p>
+  <p>
+    <a href="https://www.nasa.gov/press-release/goddard/2017/james-webb-space-telescope-art-exhibit-opens-to-public/">Art + Science at NASA Goddard</a>
+    <br>
+    Greenbelt, MD
   </p>
   <p>
     <a href="http://thegalallery.com/love-is">Love Is at The Galallery</a>
