--- a/sketchnotes/index.html
+++ b/sketchnotes/index.html
@@ -192,6 +192,11 @@
     See my art
   </p>
   <p>
+    <a href="https://www.nasa.gov/press-release/goddard/2017/james-webb-space-telescope-art-exhibit-opens-to-public/">Art + Science at NASA Goddard</a>
+    <br>
+    Greenbelt, MD
+  </p>
+  <p>
     <a href="http://thegalallery.com/love-is">Love Is at The Galallery</a>
     <br>
     San Francisco, CA
