add sketchnote embed

--- a/sketchnotes/index.html
+++ b/sketchnotes/index.html
@@ -110,6 +110,9 @@
 				</ul>
 			</p>
 
+      <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Meeting no-show gives me rare opening to (finally) frame my <a href="https://twitter.com/clarity_conf">@clarity_conf</a> sketchnote for wallhanging. Thanks <a href="https://twitter.com/jina">@jina</a>! <a href="https://t.co/GZxs3NFnhp">pic.twitter.com/GZxs3NFnhp</a></p>&mdash; Nathan August Curtis (@nathanacurtis) <a href="https://twitter.com/nathanacurtis/status/753294953409896448">July 13, 2016</a></blockquote>
+      <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 		</div>
 
 		<div>
