--- a/talks/index.html
+++ b/talks/index.html
@@ -93,6 +93,11 @@
 				<li> #DesignTalk &mdash; <a href="http://padlet.com/norisjavier/designtalk"> Virtual panel on Twitter</a> </li>
 			</p>
 
+      <p>
+        <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">&quot;Everything you are passionate about is worth pursuing. The dots will connect.&quot; -<a href="https://twitter.com/bysusanlin">@bysusanlin</a> <a href="https://twitter.com/wafflejs">@wafflejs</a> <a href="http://t.co/UxVblcCxDM">pic.twitter.com/UxVblcCxDM</a></p>&mdash; Pawel 🐾🔔🍤🐥☕️🎿 (@makenai) <a href="https://twitter.com/makenai/status/629124757795926016">August 6, 2015</a></blockquote>
+        <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </p>
+
 		</div>
 
 		<div class="video">
