change raincat link

--- a/design/index.html
+++ b/design/index.html
@@ -176,7 +176,7 @@
 			<img src="/images/work/raincat.jpg">
 			<h2> Indie Games </h2>
 			<p>
-				Old work that's interesting. During college, I shipped <a href="http://www.gamecreation.org/search/node/susan%20lin">an indie game every semester.</a> The best of the bunch was Raincat &mdash; a 2D puzzle game where you keep the cat dry. <a href="http://raincat.bysusanlin.com">The site</a> I made to promote it has accrued over 16,000 views. It was a project that taught me how to share work online.
+				Old work that's interesting. During college, I shipped <a href="http://www.gamecreation.org/search/node/susan%20lin">an indie game every semester.</a> The best of the bunch was Raincat &mdash; a 2D puzzle game where you keep the cat dry. <a href="http://bysusanlin.com/raincat">The site</a> I made to promote it has accrued over 16,000 views. It was a project that taught me how to share work online.
 			</p>
 		</div>
 
