--- a/talks/index.html
+++ b/talks/index.html
@@ -70,7 +70,7 @@
 			</h2>
 
 			<p>
-				<em>I am currently not accepting new speaking inquiries.</em> I enjoy speaking about my work and process, especially regarding where creative and technical meets.
+				I enjoy speaking about my work and process, especially regarding where creative and technical meets.
 			</p>
 
 			<p>
