--- a/talks/index.html
+++ b/talks/index.html
@@ -70,7 +70,7 @@
 			</h2>
 
 			<p>
-				I enjoy speaking about my work and process, especially regarding where creative and technical meets.
+				I enjoy speaking about my work and process, especially regarding where creative and technical meets. Interested in having me speak? bysusanlin at gmail.
 			</p>
 
 			<p>
