--- a/talks/index.html
+++ b/talks/index.html
@@ -70,7 +70,15 @@
 			</h2>
 
 			<p>
-				I enjoy speaking about my work and process, especially regarding where creative and technical meets. Interested in having me speak? bysusanlin at gmail.
+				I enjoy speaking about my work and process, especially regarding where creative and technical meets.
+				<br><br>
+		 		Availability:
+		 		<li>
+		 			Open for talk inquiries!
+       				 </li>
+				<li>
+				  Interested? bysusanlin at gmail.
+		 		</li>
 			</p>
 
 			<p>
