--- a/sketchnotes/index.html
+++ b/sketchnotes/index.html
@@ -68,7 +68,15 @@
 			<h2> Sketchnotes </h2>
 
 			<p>
-				I create big scale watercolor painted notes. I can effectively sketch topics in User Experience, Design Process, Front-end Engineering, and Diversity. I've previously been hired to sketch AlterConf, Clarity, and Smashing Conf. I also offer the notes to speakers as gifts. <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">Check out the full archive of sketchnotes.</a> Interested in sketchnotes? bysusanlin at gmail.
+				I create big scale watercolor painted notes. I can effectively sketch topics in User Experience, Design Process, Front-end Engineering, and Diversity. I've previously been hired to sketch AlterConf, Clarity, and Smashing Conf. I also offer the notes to speakers as gifts. <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">Check out the full archive of sketchnotes.</a>
+				<br><br>
+		 		Availability:
+		 		<li>
+		 			Open for sketchnote inquiries! For both events and scoped branding projects.
+       				 </li>
+				<li>
+				  Interested? bysusanlin at gmail.
+		 		</li>
 			</p>
 
 			<p>
