--- a/about/index.html
+++ b/about/index.html
@@ -162,7 +162,7 @@
 			<p>
 				I drafted, designed, and coded this bit of the internet. Yes, <a href="/">the landing page</a> is fanart of Earthbound.
 				<br><br>
-				<a href="http://sketch.bysusanlin.com/tagged/pixel-art">See the pixel artwork process.</a>
+				<a href="http://sketch.bysusanlin.com/post/116282856188/pictured-monitor-size-and-mobile-size-resolutions">Read about landing page building process.</a>
 				<br>
 				<a href="https://github.com/bysl/bysl.github.io">View the source code on Github.</a>
 			</p>
