--- a/sketchnotes/index.html
+++ b/sketchnotes/index.html
@@ -70,15 +70,20 @@
 			<p>
 				I create big scale watercolor painted notes. I can effectively sketch topics in User Experience, Design Process, Front-end Engineering, and Diversity. I've previously been hired to sketch AlterConf, Clarity, and Smashing Conf. I also offer the notes to speakers as gifts. <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">Check out the full archive of sketchnotes.</a>
 				<br><br>
-		 		Availability:
-		 		<li>
-		 			Open for sketchnote inquiries! For both events and scoped branding projects.
-       				 </li>
-				<li>
-				  Interested? bysusanlin at gmail.
-		 		</li>
 			</p>
-
+			
+			<p>
+			Availability: <br>
+				<ul>
+					<li>
+						Open for sketchnote inquiries! For conferences, events, and scoped branding projects.
+					 </li>
+					<li>
+					  Interested? bysusanlin at gmail.
+					</li>
+				</ul>
+			</p>
+				
 			<p>
 				My terms: <br>
 				<ul>
@@ -89,10 +94,10 @@
 						Travel (local transit and flights) covered. Plus hotel when applicable.
 					</li>
 					<li>
-						Market freelance rate paid by the hour. Expect to cover hours preparing the set-up, time spent drawing talks, and post-processing.
+						Market freelance rate paid by the day. Rates start at $2000 (USD).
 					</li>
 					<li>
-						If your event is not-for-profit and a cause I believe in, we can work something out.
+						If your event is not-for-profit and contributes to a good cause, we can work something out.
 					</li>
 				</ul>
 			</p>
