--- a/talks/index.html
+++ b/talks/index.html
@@ -72,18 +72,23 @@
 			<p>
 				I enjoy speaking about my work and process, especially regarding where creative and technical meets.
 				<br><br>
-		 		Availability:
-		 		<li>
+			</p>
+
+			<p>
+				Availability: <br>
+		 		<ul>
+				<li>
 		 			Open for talk inquiries!
        				 </li>
 				<li>
 				  Interested? bysusanlin at gmail.
 		 		</li>
+			</ul>
 			</p>
-
+			
 			<p>
-				Past Talks:
-
+				Past Talks: <br>
+			<ul>
 				<li> The Galallery &mdash; <a href="https://www.facebook.com/events/1234536963304621/">Moon Prism Power: Sailor Moon Panel</a> </li>
 
 				<li> The Junction &mdash; <a href="https://www.eventbrite.com/e/the-junction-prague-tickets-26112567392 ">Full STEAM Ahead</a> | <a href="https://www.youtube.com/watch?v=kY6lv7WsPSM">Video</a> </li>
@@ -99,6 +104,7 @@
 				<li> Academy of Arts &mdash; Guest Lecture for Visual Design Studio </li>
 
 				<li> #DesignTalk &mdash; <a href="http://padlet.com/norisjavier/designtalk"> Virtual panel on Twitter</a> </li>
+			</ul>
 			</p>
 
       <p>
