update about text

--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@
 		<header>
 
 	<a href="/" class="mobile-logo">
-		<img src="/images/bysusanlin-totoro.svg" height="60px">
+		<img src="/images/bysusanlin.svg" height="60px">
 	</a>
 
   <ul>
@@ -70,15 +70,15 @@
 			</h2>
 
 			<p>
-				Hello World; Susan is a Product Designer who codes and an Artist, primarily painting in watercolor.
+				Hello World! Susan is a Senior Product Designer who can also write front-end code and illustrate. She is also an artist, primarily painting in watercolor and making pixel art.
       </p>
 
       <p>
-				She currently designs at Automattic. Previously, she <a href="/talks">built styleguides</a> in addition to user experiences at Treehouse, OpenTable, and Trulia. She studied <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">HCI at Carnegie Mellon.</a> She believes the best technology designers are able to code and push their own pixels. Her design ethos is to approach each solution as part of a living system.
+				She currently designs at Automattic. Previously, she <a href="/talks">built and maintaitned design systems</a> in addition to user experiences with Treehouse, OpenTable, Blippy, Beyond Pricing, and Trulia. She studied Carnegie Mellon and holds a <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">Masters of HCI</a> and interdisciplinary <a href]"https://www.cmu.edu/interdisciplinary/programs/">BXA degree.</a> She believes the best technology designers are able to understand code and push their own pixels. Her design ethos is to approach each solution as part of a living system.
       </p>
 
       <p>
-				She illustrates. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes.</a> She paints many <a href="https://instagram.com/explore/tags/linwatercolorforest/">watercolor trees</a> and <a href="https://www.instagram.com/explore/tags/susansmovingstudio/">sketches on the go.</a> And most recently, she indulges in <a href="https://www.instagram.com/explore/tags/pixelsbysusan/">pixel art.</a> She believes delibrate practice is the key to a successful art practice and has shown her work in several cities.
+				She illustrates. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes.</a> She paints many <a href="https://instagram.com/explore/tags/linwatercolorforest/">watercolor trees</a> and <a href="https://www.instagram.com/explore/tags/susansmovingstudio/">made art while she traveled.</a> Most recently, she indulges in <a href="https://www.instagram.com/explore/tags/pixelsbysusan/">pixel art.</a> She believes delibrate practice is the key to a successful art practice and has shown her work in several cities.
       </p>
 
       <br>
@@ -111,11 +111,11 @@
         <ul>
           <li>
             <a href="https://www.nasa.gov/press-release/goddard/2017/james-webb-space-telescope-art-exhibit-opens-to-public/">The James Webb Space Telescope: Art + Science at NASA Goddard</a> &mdash;
-              Greenbelt, MD. <span class="typeNums">3/3/17-4/16/17</span>
+              Greenbelt, MD. <span class="typeNums">3/3/17-Now</span>
           </li>
           <li>
             <a href="http://thegalallery.com/love-is">Love Is: Benefit Art Show at The Galallery</a> &mdash;
-              San Francisco, CA. <span class="typeNums">2/18/17-Now</span>
+              San Francisco, CA. <span class="typeNums">2/18/17-3/26/17</span>
           </li>
           <li>
             <a href="http://moonprismpower.net/">Moon Prism Power: Sailor Moon Art Show at The Galallery</a> &mdash;
@@ -160,7 +160,7 @@
 			<br>
 
 			<p>
-				I drafted, designed, and coded this bit of the internet. Yes, <a href="/">the landing page</a> is fanart of Earthbound.
+				I drafted, designed, and coded this bit of the internet. Yes, <a href="/">the landing page</a> is fanart of Earthbound!
 				<br><br>
 				<a href="http://sketch.bysusanlin.com/post/116282856188/pictured-monitor-size-and-mobile-size-resolutions">Read about landing page building process.</a>
 				<br>
@@ -174,7 +174,7 @@
 <nav>
 
   <a href="/">
-    <img src="/images/bysusanlin-totoro.svg" height="60px">
+    <img src="/images/bysusanlin.svg" height="60px">
   </a>
 
   <p>
@@ -184,11 +184,6 @@
     <a href="https://www.nasa.gov/press-release/goddard/2017/james-webb-space-telescope-art-exhibit-opens-to-public/">Art + Science at NASA Goddard</a>
     <br>
     Greenbelt, MD
-  </p>
-  <p>
-    <a href="http://thegalallery.com/love-is">Love Is at The Galallery</a>
-    <br>
-    San Francisco, CA
   </p>
   <p>
     <a href="https://www.facebook.com/teaspoonsanfrancisco/">Teaspoon SF</a> <br>
