--- a/illustration/index.html
+++ b/illustration/index.html
@@ -25,7 +25,7 @@
 		<header>
 
 	<a href="/" class="mobile-logo">
-		<img src="/images/bysusanlin-totoro.svg" height="60px">
+		<img src="/images/bysusanlin.svg" height="60px">
 	</a>
 
   <ul>
@@ -161,7 +161,7 @@
 <nav>
 
   <a href="/">
-    <img src="/images/bysusanlin-totoro.svg" height="60px">
+    <img src="/images/bysusanlin.svg" height="60px">
   </a>
 
   <p>
@@ -171,11 +171,6 @@
     <a href="https://www.nasa.gov/press-release/goddard/2017/james-webb-space-telescope-art-exhibit-opens-to-public/">Art + Science at NASA Goddard</a>
     <br>
     Greenbelt, MD
-  </p>
-  <p>
-    <a href="http://thegalallery.com/love-is">Love Is at The Galallery</a>
-    <br>
-    San Francisco, CA
   </p>
   <p>
     <a href="https://www.facebook.com/teaspoonsanfrancisco/">Teaspoon SF</a> <br>
