--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<header>
 
 	<a href="/" class="mobile-logo">
-		<img src="/images/bysusanlin-totoro.svg" height="60px">
+		<img src="/images/bysusanlin.svg" height="60px">
 	</a>
 
   <ul>
