--- a/sketchnotes/index.html
+++ b/sketchnotes/index.html
@@ -25,7 +25,7 @@
 		<header>
 
 	<a href="/" class="mobile-logo">
-		<img src="/images/bysusanlin-totoro.svg" height="60px">
+		<img src="/images/bysusanlin.svg" height="60px">
 	</a>
 
   <ul>
@@ -71,7 +71,7 @@
 				I create big scale watercolor painted notes. I can effectively sketch topics in User Experience, Design Process, Front-end Engineering, and Diversity. I've previously been hired to sketch AlterConf, Clarity, and Smashing Conf. I also offer the notes to speakers as gifts. <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">Check out the full archive of sketchnotes.</a>
 				<br><br>
 			</p>
-			
+
 			<p>
 			Availability: <br>
 				<ul>
@@ -83,7 +83,7 @@
 					</li>
 				</ul>
 			</p>
-				
+
 			<p>
 				My terms: <br>
 				<ul>
@@ -203,7 +203,7 @@
 <nav>
 
   <a href="/">
-    <img src="/images/bysusanlin-totoro.svg" height="60px">
+    <img src="/images/bysusanlin.svg" height="60px">
   </a>
 
   <p>
@@ -213,11 +213,6 @@
     <a href="https://www.nasa.gov/press-release/goddard/2017/james-webb-space-telescope-art-exhibit-opens-to-public/">Art + Science at NASA Goddard</a>
     <br>
     Greenbelt, MD
-  </p>
-  <p>
-    <a href="http://thegalallery.com/love-is">Love Is at The Galallery</a>
-    <br>
-    San Francisco, CA
   </p>
   <p>
     <a href="https://www.facebook.com/teaspoonsanfrancisco/">Teaspoon SF</a> <br>
