--- a/talks/index.html
+++ b/talks/index.html
@@ -25,7 +25,7 @@
 		<header>
 
 	<a href="/" class="mobile-logo">
-		<img src="/images/bysusanlin-totoro.svg" height="60px">
+		<img src="/images/bysusanlin.svg" height="60px">
 	</a>
 
   <ul>
@@ -85,7 +85,7 @@
 		 		</li>
 			</ul>
 			</p>
-			
+
 			<p>
 				Past Talks: <br>
 			<ul>
@@ -140,7 +140,7 @@
 <nav>
 
   <a href="/">
-    <img src="/images/bysusanlin-totoro.svg" height="60px">
+    <img src="/images/bysusanlin.svg" height="60px">
   </a>
 
   <p>
@@ -150,11 +150,6 @@
     <a href="https://www.nasa.gov/press-release/goddard/2017/james-webb-space-telescope-art-exhibit-opens-to-public/">Art + Science at NASA Goddard</a>
     <br>
     Greenbelt, MD
-  </p>
-  <p>
-    <a href="http://thegalallery.com/love-is">Love Is at The Galallery</a>
-    <br>
-    San Francisco, CA
   </p>
   <p>
     <a href="https://www.facebook.com/teaspoonsanfrancisco/">Teaspoon SF</a> <br>
