--- a/about/index.html
+++ b/about/index.html
@@ -70,15 +70,19 @@
 			</h2>
 
 			<p>
-				Hello World! Susan is a Senior Product Designer who can also write front-end code and illustrate. She is also an artist, primarily painting in watercolor and making pixel art.
+				Hello World! Susan is a Senior Product Designer who can write front-end code and illustrate. She is also an artist, primarily painting in watercolor and making pixel art.
       </p>
 
       <p>
-				She currently designs at Automattic. Previously, she <a href="/talks">built and maintaitned design systems</a> in addition to user experiences with Treehouse, OpenTable, Blippy, Beyond Pricing, and Trulia. She studied Carnegie Mellon and holds a <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">Masters of HCI</a> and interdisciplinary <a href]"https://www.cmu.edu/interdisciplinary/programs/">BXA degree.</a> She believes the best technology designers are able to understand code and push their own pixels. Her design ethos is to approach each solution as part of a living system.
+				She currently designs at Automattic. Previously, she <a href="/talks">built and maintained design systems</a>, in addition to user experiences, with Treehouse, OpenTable, Blippy, Beyond Pricing, and Trulia. She studied at Carnegie Mellon University and holds a <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">Masters of HCI</a> and interdisciplinary <a href="https://www.cmu.edu/interdisciplinary/programs/">BXA degree</a>. She believes the best technology designers are able to understand code and push their own pixels. Her design ethos is to approach each solution as part of a living system which scales beyond the immediate feature.
       </p>
 
       <p>
 				She illustrates. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes.</a> She paints many <a href="https://instagram.com/explore/tags/linwatercolorforest/">watercolor trees</a> and <a href="https://www.instagram.com/explore/tags/susansmovingstudio/">made art while she traveled.</a> Most recently, she indulges in <a href="https://www.instagram.com/explore/tags/pixelsbysusan/">pixel art.</a> She believes delibrate practice is the key to a successful art practice and has shown her work in several cities.
+      </p>
+
+      <p>
+        Ask her about <a href="https://www.instagram.com/ponpon.shiba/">Ponpon</a>, her (currently) nonexistent shiba inu with instagram followers.
       </p>
 
       <br>
