update talks pitch

--- a/talks/index.html
+++ b/talks/index.html
@@ -70,20 +70,20 @@
 			</h2>
 
 			<p>
-				I enjoy speaking about my work and process, especially regarding where creative and technical meets.
+				I am a prolific creator and I enjoy speaking about my work and process. I would love to speak more about design systems, combining visual and techincal skills, and self care.
 				<br><br>
 			</p>
 
 			<p>
 				Availability: <br>
 		 		<ul>
-				<li>
-		 			Open for talk inquiries!
-       				 </li>
-				<li>
-				  Interested? bysusanlin at gmail.
-		 		</li>
-			</ul>
+  				<li>
+  	         Open for talk inquiries!
+         	</li>
+  				<li>
+  				  Interested? bysusanlin at gmail.
+  		 		</li>
+  			</ul>
 			</p>
 
 			<p>
