update sketchnotes and avail format

--- a/talks/index.html
+++ b/talks/index.html
@@ -72,18 +72,7 @@
 			<p>
 				I am a prolific creator and I enjoy speaking about my work and process. I would love to speak more about design systems, combining visual and techincal skills, and self care.
 				<br><br>
-			</p>
-
-			<p>
-				Availability: <br>
-		 		<ul>
-  				<li>
-  	         Open for talk inquiries!
-         	</li>
-  				<li>
-  				  Interested? bysusanlin at gmail.
-  		 		</li>
-  			</ul>
+        Open for talk inquiries! bysusanlin at gmail.
 			</p>
 
 			<p>
