--- a/sketchnotes/index.html
+++ b/sketchnotes/index.html
@@ -68,20 +68,9 @@
 			<h2> Sketchnotes </h2>
 
 			<p>
-				I create big scale watercolor painted notes. I can effectively sketch topics in User Experience, Design Process, Front-end Engineering, and Diversity. I've previously been hired to sketch AlterConf, Clarity, and Smashing Conf. I also offer the notes to speakers as gifts. <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">Check out the full archive of sketchnotes.</a>
+				I create large watercolor painted notes. I can effectively sketch topics in user experience and design, front-end engineering, and diversity plus inclusion. I've previously been hired to sketch <a href="https://alterconf.com/conferences">AlterConf</a>, <a href="clarityconf.com">Clarity</a>, and <a href="https://smashingconf.com/">Smashing Conf</a>. I offer the notes to speakers as gifts at the conclusion of the event. <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">Check out the full archive of sketchnotes.</a>
 				<br><br>
-			</p>
-
-			<p>
-			Availability: <br>
-				<ul>
-					<li>
-						Open for sketchnote inquiries! For conferences, events, and scoped branding projects.
-					 </li>
-					<li>
-					  Interested? bysusanlin at gmail.
-					</li>
-				</ul>
+        Open for sketchnote inquiries! Including conferences, events, and scoped branding projects. bysusanlin at gmail.
 			</p>
 
 			<p>
@@ -109,13 +98,13 @@
 						You may promote your event with an official sketchnoter.
 					</li>
 					<li>
-						I draw in realtime. Sketchnotes are shared while the conference is happening.
+						I draw in realtime. Sketchnotes are shared while the conference is happening. I finish and share when each speaker wraps up.
 					</li>
 					<li>
 						I will cross-promote from my personal accounts before, during, and after the event.
 					</li>
 					<li>
-						You will receive high-resolution sketchnotes images to share for present and future events.
+						You will receive high-resolution sketchnotes images and a PDF deck to share for present and future events.
 					</li>
 					<li>
             Sketchnotes are offered to speakers at the end of the event as gifts.
@@ -143,6 +132,12 @@
 				<br><br>
 
 				Featured around the web:
+				<li>
+					Clarity 2016 &mdash; <a href="https://www.clarityconf.com/2016/">Sketchnoter and Schedule</a>
+				</li>
+				<li>
+					AlterConf Dublin &mdash; <a href="https://alterconf.com/conferences/dublin-ireland">Community Involvement</a>
+				</li>
 				<li>
 					CSSconf 2015 &mdash; <a href="https://2015.cssconf.com/#sketches">Sketches Gallery</a>
 				</li>
