--- a/sketchnotes/index.html
+++ b/sketchnotes/index.html
@@ -68,7 +68,7 @@
 			<h2> Sketchnotes </h2>
 
 			<p>
-				I create large watercolor painted notes. I can effectively sketch topics in user experience and design, front-end engineering, and diversity plus inclusion. I've previously been hired to sketch <a href="https://alterconf.com/conferences">AlterConf</a>, <a href="clarityconf.com">Clarity</a>, and <a href="https://smashingconf.com/">Smashing Conf</a>. I offer the notes to speakers as gifts at the conclusion of the event. <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">Check out the full archive of sketchnotes.</a>
+				I create large watercolor painted notes. I can effectively sketch topics in user experience and design, front-end engineering, and diversity plus inclusion. I've previously been hired to sketch <a href="https://alterconf.com/conferences">AlterConf</a>, <a href="http://clarityconf.com">Clarity</a>, and <a href="https://smashingconf.com/">Smashing Conf</a>. I offer the notes to speakers as gifts at the conclusion of the event. <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">Check out the archive of sketchnotes.</a>
 			</p>
       <p>
         Open for sketchnote inquiries! Including conferences, events, and scoped branding projects. bysusanlin at gmail.
