format meta better

--- a/design/index.html
+++ b/design/index.html
@@ -64,9 +64,9 @@
 </header>
 
 		<div class="intro">
-			<h2> Design </h2>
+			<h2> Product Design </h2>
 			<p>
-				I am a Senior level Product Designer with 7 years of experience. This is a selected history of work. I have designed across platforms and especially feel at home on the web. My core contributions are UX flows, experience maps, UI finesse, prototypes, seeing a design to ship, and owning the post-shipping follow-up on the UX. As a  bonus, I can also write production worthy HTML and CSS/Sass as well as illustrate clean vector imagery.
+				I am a Senior level Product Designer with 7 years of experience. This is a selected history of work serving as a brief overview. I have designed across platforms and especially feel at home on the web. My core contributions are UX flows, experience maps, UI finesse, prototypes, seeing a design to ship, and owning the post-shipping follow-up on the UX. As a bonus, I can also write production worthy HTML and CSS/Sass as well as illustrate clean vector imagery.
 		 		<br><br>
         <a href="/SusanLin-resume.pdf">View PDF resume.</a>
 			</p>
