add podcast shoutout

--- a/about/index.html
+++ b/about/index.html
@@ -70,7 +70,7 @@
 			</h2>
 
 			<p>
-				Hello World! Susan is a Senior Product Designer who can write front-end code and illustrate. She is also an artist, primarily painting in watercolor and making pixel art.
+				Hello World! Susan Lin is a Senior Product Designer who can write front-end code and illustrate. She is also an artist, primarily painting in watercolor and making pixel art.
       </p>
 
       <p>
