--- a/design/index.html
+++ b/design/index.html
@@ -182,7 +182,7 @@
 
 		<div>
 			<img src="/images/work/nasa.png">
-			<h2> NASA </h2>
+			<h2> NASA Design Intern </h2>
 			<p>
 				Old work that's interesting. I interned and freelanced with NASA's education outreach team who worked on the James Webb Space Telescope. I illustrated art for 2 games <a href="http://jwst.nasa.gov/scope.html">Scope it out!</a> and <a href="http://jwst.nasa.gov/build.html">Build It Yourself: Satellite!</a> I also made print designs which were <a href="http://sketch.bysusanlin.com/tagged/nasa">seen on the set of The Big Bang Theory.</a> It was an experience that set the tone for my entrance into the industry.
         <br><br>
@@ -192,7 +192,7 @@
 
 		<div>
 			<img src="/images/work/raincat.jpg">
-			<h2> Indie Games </h2>
+			<h2> Indie Games Creator </h2>
 			<p>
 				Old work that's interesting. During college, I shipped <a href="http://www.gamecreation.org/search/node/susan%20lin">an indie game every semester.</a> The best of the bunch was Raincat &mdash; a 2D puzzle game where you keep the cat dry. <a href="http://bysusanlin.com/raincat">The site</a> I made to promote it has accrued over 16,000 views. It was a project that taught me how to share work online.
 			</p>
