--- a/sketchnotes/index.html
+++ b/sketchnotes/index.html
@@ -158,6 +158,9 @@
 				<li>
           Sketchnote Army &mdash; <a href="http://sketchnotearmy.com/blog/2014/6/25/cssconf-sketchnote-susan-lin.html">CSSconf 2014</a> & <a href="http://sketchnotearmy.com/blog/2013/4/2/interaction-2013-sketchnotes.html">Interaction 2013</a>
 				</li>
+				<li>
+          The Pen Addict Podcast &mdash; <a href="https://overcast.fm/+CGRvTfoiQ/27:45">239: Previously Inksploded Shoutout</a>
+				</li>
 		</div>
 
     <div>
