--- a/design/index.html
+++ b/design/index.html
@@ -76,7 +76,10 @@
 			<img src="/images/work/treehouse.png">
 			<h2> Treehouse Product </h2>
 			<p>
-				I worked at <a href="http://teamtreehouse.com">Treehouse</a> as a Product Designer on the <a href="http://dribbble.com/treehouse">design team.</a> I had a hand in designing B2B products, consumer products, coding landing pages, illustrating course assets, and <a href="https://medium.com/treehouse-engineering">writing blog posts.</a> Featured above is the <a href="http://teamtreehouse.com/back-to-school">Back to School</a> 2015 marketing campaign.
+      Pricing
+      Settins
+      What else?
+      </p>
 		</div> -->
 
 		<div>
@@ -84,13 +87,18 @@
 			<h2> Treehouse Marketing and Tools </h2>
 			<p>
 				I worked at <a href="http://teamtreehouse.com">Treehouse</a> as a Product Designer on the <a href="http://dribbble.com/treehouse">design team.</a> I had a hand in designing B2B products, consumer products, coding landing pages, illustrating course assets, and <a href="https://medium.com/treehouse-engineering">writing blog posts.</a> Featured above is the <a href="http://teamtreehouse.com/back-to-school">Back to School</a> 2015 marketing campaign.
+      </p>
 		</div>
 <!--
 		<div>
 			<img src="/images/work/treehouse.png">
 			<h2> Treehouse Illustrations </h2>
 			<p>
-				I worked at <a href="http://teamtreehouse.com">Treehouse</a> as a Product Designer on the <a href="http://dribbble.com/treehouse">design team.</a> I had a hand in designing B2B products, consumer products, coding landing pages, illustrating course assets, and <a href="https://medium.com/treehouse-engineering">writing blog posts.</a> Featured above is the <a href="http://teamtreehouse.com/back-to-school">Back to School</a> 2015 marketing campaign.
+      Badges
+      About
+      Jobs
+      Back to School
+      </p>
 		</div> -->
 
 		<div>
@@ -176,7 +184,7 @@
 			<img src="/images/work/.png">
 			<h2> Side Project: Sociallist </h2>
 			<p>
-				Blop
+				Find old copy or use preso images
 			</p>
 		</div> -->
 
