heashot credit, more text

--- a/about/index.html
+++ b/about/index.html
@@ -169,7 +169,7 @@
 				<a href="http://sketch.bysusanlin.com/post/116282856188/pictured-monitor-size-and-mobile-size-resolutions">Read about landing page building process.</a>
 				<br>
 				<a href="https://github.com/bysl/bysl.github.io">View the source code on Github.</a>
-        <br><br>The headshot of me is by <a href="https://www.instagram.com/jaymz.marsters/">Jamyz Marsters</a>.
+        <br><br>The headshot of me is by <a href="https://www.instagram.com/jaymz.marsters/">Jamyz Marsters.</a>
 			</p>
 		</div>
 
