add footer sprite link

--- a/sketchnotes/index.html
+++ b/sketchnotes/index.html
@@ -338,7 +338,7 @@
 		<div class="clear"></div>
 
 		<div class="footnote">
-			<img src="/images/sprite-fp.png" width="27px" class="sprite">
+			<a href="/"><img src="/images/sprite-fp.png" width="27px" class="sprite"></a>
 			<br>
 			&copy; Susan Lin, 2003-2017.
 		</div>
