--- a/about/index.html
+++ b/about/index.html
@@ -314,7 +314,7 @@
 		<div class="clear"></div>
 
 		<div class="footnote">
-			<img src="/images/sprite-fp.png" width="27px" class="sprite">
+			<a href="/"><a href="/"><img src="/images/sprite-fp.png" width="27px" class="sprite"></a></a>
 			<br>
 			&copy; Susan Lin, 2003-2017.
 		</div>
