--- a/design/index.html
+++ b/design/index.html
@@ -84,7 +84,7 @@
 
 		<div>
 			<img src="/images/work/treehouse.png">
-			<h2> Treehouse Marketing and Tools </h2>
+			<h2> Treehouse </h2>
 			<p>
 				I worked at <a href="http://teamtreehouse.com">Treehouse</a> as a Product Designer on the <a href="http://dribbble.com/treehouse">design team.</a> I had a hand in designing B2B products, consumer products, coding landing pages, illustrating course assets, and <a href="https://medium.com/treehouse-engineering">writing blog posts.</a> Featured above is the <a href="http://teamtreehouse.com/back-to-school">Back to School</a> 2015 marketing campaign.
       </p>
